--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <img src="аватарка ВК.jpg" alt="Иванна Палчей" width="200">
+    <img src="аватарка ВК.jpg" width="200" alt="Иванна Палчей">
     
    <h1>Палчей Иванна</h1> 
 
