--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <img src="аватаркаВК.jpg" width="150" alt="Иванна Палчей">
+    <img src="картинка" width="150" alt="Иванна Палчей">
     
    <h1>Палчей Иванна</h1> 
 
